# djat_x_burin

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  PATHWAYS_ARCHITECTURE_v1.1.0.md  README.md  START_BURIN_HANDOFF.prompt.md  fly.toml
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: database.py
backend/app/models/: conservation.py  pathway.py
backend/app/routers/: burin.py  pathway_templates.py  pathways.py  transect_trust.py
backend/app/services/: burin_agents.py  conservation_agents.py  conservation_seed.py  conservation_service.py  pathway_executor.py  pathway_runner.py  proof_provenance.py  template_loader.py  trustkey_agents.py
burin-pathways/: APPLICATION_PLAYBOOK.md  PACKAGE.yaml  TRANSECT_TRUST_PLAYBOOK.md  pathways-index.yaml
burin-pathways/pathways/: Burin.Conformance.Test.v1.yaml  Conservation.Program.Register.v1.yaml  Conservation.Trust.CardIssue.v1.yaml  Pathways.TrustKey.IssueDimensionalLink@v1.yaml  Pathways.TrustKey.VerifyDimensionalLink@v1.yaml  Presence.Boundary.OverlapProof.v1.yaml  Presence.Export.DegradeToPaper.v1.yaml  Presence.Witness.AppendAttestation.v1.yaml
burin-pathways/patterns/: Pattern.BurinSubstrate.DualLicenseSplit.yaml  Pattern.PresencePathway.PresenceRequired.yaml
burin-pathways/registry/: context-lenses.yaml
burin-pathways/techniques/: TRUST_KEY_TECHNIQUE.v1.md
collaboration/20260701-120000/: COLLABORATION_READINESS.md  (+3 more)
keys/: bundle-signing.public.pem
presence-passport/: README.md  index.html  package.json
transect-trust/: README.md  index.html  package.json  wrangler.toml
(+80 files in other folders)
