[project]
name = "presence-passport-backend"
version = "0.1.0"
description = "Minimal Pathways engine with Burin presence agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "burin",
    "shapely>=2.0",
]

[tool.uv.sources]
burin = { path = "../Burin" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
